--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
     <style>
         body {
             margin: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-                'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-                sans-serif;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
         }
     </style>
 </head>
 <body>
     <div id="root"></div>
-    <script type="text/babel" src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
+```
+
+### **Paso 4: Guardar cambios**
+
+1. En cada archivo editado, baja hasta abajo
+2. Escribe en "Commit changes": `Código completo de la aplicación`
+3. Haz clic en **"Commit changes"**
+
+### **Paso 5: Probar**
+
+Espera 1-2 minutos y abre tu página:
+```
+https://TU_USUARIO.github.io/animalitos-venezuela/
