--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         const { useState, useEffect } = React;
 
         const animalitos = [
-          { numero: '00', nombre: 'Delfín', color: 'bg-blue-500' },
+          { numero: '0', nombre: 'Delfín', color: 'bg-blue-500' },
+          { numero: '00', nombre: 'Ballena', color: 'bg-blue-500' },
           { numero: '01', nombre: 'Carnero', color: 'bg-amber-600' },
           { numero: '02', nombre: 'Toro', color: 'bg-red-700' },
           { numero: '03', nombre: 'Ciempiés', color: 'bg-gray-600' },
@@ -393,3 +394,4 @@
     </script>
 </body>
 </html>
+
